--- a/templates/systemd.j2
+++ b/templates/systemd.j2
@@ -1,6 +1,6 @@
 [Unit]
 Description=Mattermost
-After=syslog.target network.target postgresql-9.6.service
+After=syslog.target network.target postgresql.service
 
 [Service]
 Type=simple
